--- a/tf_repeat/BUILD
+++ b/tf_repeat/BUILD
@@ -3,10 +3,10 @@ licenses(["notice"])  # Apache 2.0
 package(default_visibility = ["//visibility:public"])
 
 cc_binary(
-    name = 'python/ops/_zero_out_ops.so',
+    name = 'python/ops/_repeat_ops.so',
     srcs = [
-        "cc/kernels/zero_out_kernels.cc",
-        "cc/ops/zero_out_ops.cc",
+        "cc/kernels/repeat_kernels.cc",
+        "cc/ops/repeat_ops.cc",
     ],
     linkshared = 1,
     deps = [
@@ -17,37 +17,37 @@ cc_binary(
 )
 
 py_library(
-    name = "zero_out_ops_py",
+    name = "repeat_ops_py",
     srcs = ([
-        "python/ops/zero_out_ops.py",
+        "python/ops/repeat_ops.py",
     ]),
     data = [
-        ":python/ops/_zero_out_ops.so"
+        ":python/ops/_repeat_ops.so"
     ],
     srcs_version = "PY2AND3",
 )
 
 py_test(
-    name = "zero_out_ops_py_test",
+    name = "repeat_ops_py_test",
     srcs = [
-        "python/ops/zero_out_ops_test.py"
+        "python/ops/repeat_ops_test.py"
     ],
-    main = "python/ops/zero_out_ops_test.py",
+    main = "python/ops/repeat_ops_test.py",
     deps = [
-        ":zero_out_ops_py",
+        ":repeat_ops_py",
     ],
     srcs_version = "PY2AND3",
 )
 
 py_library(
-    name = "zero_out_py",
+    name = "repeat_py",
     srcs = ([
         "__init__.py",
         "python/__init__.py",
         "python/ops/__init__.py",
     ]),
     deps = [
-        ":zero_out_ops_py"
+        ":repeat_ops_py"
     ],
     srcs_version = "PY2AND3",
 )
